kubernetes/service.yaml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: auth-server-service-np
spec:
  selector:
    app: auth-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
